docs: added comment

--- a/Report.tex
+++ b/Report.tex
@@ -204,6 +204,7 @@ happens slowly, so that all recursive DNS servers have time to update their reco
 \textit{Figure \ref{fig:AR}} shows a service consisting of the following microservices:
 
 \begin{itemize}
+    % Could be refered to as a director.
     \item \textbf{DNS Server (Load Balancer)}: Directs incoming network traffic to different servers, 
     balancing the load and serving as a DNS resolver. All servers receive their own subdomains 
     with short times to live.
